package logic;

public enum Activity {
    IS_WAITING, IN_ELEVATOR, HAS_ARRIVED;
}