package logic;

public enum ElevatorMovement {
    UP, DOWN, STAND_STILL
}
