@startuml
'https://plantuml.com/class-diagram




class Application

class Main {
Scene
{static} main()
}



class Logic{
sp: SerialPort
in: Queue<String>
out: Queue<String>
gameTick()
establishConnection()
..()
}
class MessageListener
interface SerialPortMessageListener
interface Initializable
class CommandState{
parse()
}
class ElevatorGrid{
}
class Elevator{
int height
updateElevation()
}
class GuiController{
drawElevator()
drawFloor()
connectTo()
...()
}
class Floor
class SimTime{
timer: Timer
}
class Passenger
class LEDButton{
String symbol
boolean glowing
String onClick
}
Application<|- Main
Main <-- GuiController
Main <-- FXMLLoader
GuiController <|.. Initializable
GuiController <-> Logic
Logic <-- ElevatorGrid
Logic <-> SimTime
Logic <-- Logger
Logic <-> CommandState
Logic <..> MessageListener
MessageListener <|.. SerialPortMessageListener
ElevatorGrid "1" *-- "many" Elevator
ElevatorGrid "1" *-- "many" Floor
Elevator <-- ElevatorMovement
Elevator "1" *-- "many" Passenger
Floor "1" *-- "many" Passenger
Elevator "1" *-- "many" LEDButton
Floor "1" *-- "many" LEDButton
Passenger <-- Activity
Passenger "1" *- "2" Floor

enum Activity {
IS_WAITING
IN_ELEVATOR
HAS_ARRIVED
}

enum ElevatorMovement{
UP
DOWN
STAND_STILL
}

@enduml